# artisan

./: .env.development.local.template  .env.template  .eslintrc  .gitignore  README.md  embed-code-sample.tmp  index.html  package-lock.json  package.json  tailwind.config.cjs  test.js  vite.config.js  vite.config.share.js
config/: rollup.es.js
example/: README.md  package.json
install/: ai2jsx.js
install/1.0.0/: ai2jsx-config.json  ai2jsx.js
install/2.0.0/: ai2jsx.js
src/: cli.js  main.css  main.jsx  main.scss
src-tauri/: Cargo.toml  ai2html-config.json  ai2html.js  exportArtboards.js  tauri.conf.json  template-standard.ai
src-tauri/icons/: icon.icns
src-tauri/resources/: ai2html-config.json  ai2html.js  exportArtboards.js
src-tauri/src/: box_oauth.rs  commands.rs  main.rs  oauth_client.rs
src-tauri/src/commands/: hash.rs  oauth.rs
src/AppView/: index.jsx
src/actions/: archiveProject.js  backup-to-s3.js  backupFiles.js  createIllustration.js  createProject.js  deleteIllustration.js  deleteProject.js  downloadProject.js  duplicateProject.js  generateIllustration.js  get-projects-archive.js  getProjectsArchive.js  index.js  initialize.js  launchPreview.js  open-in-finder.js  openIllustration.js  openInFinder.js  outputShare.js  renameIllustration.js  renameProject.js  test.js  useArchive.js  useArchiveProject.js  useBackupProject.js  useCreate.js  useCreateIllustration.js  useCreateProject.js  useDeleteIllustration.js  (+16 more)
src/actions-legacy/: _REVIEWER_NOTE.txt  archiveProject.js  createProject.js  deleteProject.js  publishProject.js  shutdownPreview.js
(+683 files in other folders)
